<resources>
    <string name="app_name">Swayam</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="first_description">
        The number of patients in India is increasing day by day. So, in hospitals patients need to be shifted from wheelchair to stretcher, stretcher to beds, bed to wheelchair, or vice versa; which creates unsafe conditions for patients. Also, transferring the patients from wheelchair to stretcher, stretcher to beds, bed to wheelchair is always an issue for the attendant or nurse. Sometime during handling, patient and hospital staff suffer from many problems like stresses are produced in the body, sometime chances to slip down the patient. It is required to eliminate all types of possibilities.
    </string>
    <string name="second_description">
        Understanding the various issues regarding the mobility equipment, the better design will be an asset for the medical field and a helping hand for disabled individuals. There is a need for a wheelchair with height adjustability according to the height of the bed and sliding over the bed to facilitate the disabled patient’s mobility and comfortability and to provide novel medical equipment for use in the Indian hospitals. The present work proposes a development of Multipurpose Wheelchair with Height adjustability and shifting mechanism which will follow the standard specification of both the wheelchair and the bed with considering the issues like safety, hygienic, cleaning and functionality.
    </string>
    <string name="third_description">
        The design of wheel chair started by means of literature review to know its evaluation from earlier to the present generation. Market study was carried out to know the present competitors available in the market with cost analysis of the existing product. Ethnography study was done to observe the need, the importance of the existing product and to address the design gap in the existing product to the user need through questionnaires. The feedback was taken from different users and attendees, concept generation and design execution were done by the implementation of design methodologies like Quality Function Deployment, Mind mapping, Engineering Design Specification.
    </string>
    <string name="ankit_kesarwani">Ankit Kesarwani</string>
    <string name="android_developer_google_scholar_open_source_enthusiast">Android Developer | Google Scholar | Open Source Enthusiast</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact no</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">Linkedin</string>
    <string name="github">Github</string>
    <string name="explore_anytime">Explore Anytime</string>
    <string name="swayam">Swayam</string>
    <string name="explore_the_app">Explore the app</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="sos_facility">SOS Facility</string>
    <string name="track_recent_activity">Track Recent Activity</string>
    <string name="your_recent_activity">Your Recent Activity</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="today">Today</string>
    <string name="default_name">Default Name</string>
    <string name="power_on">Power On</string>
    <string name="power_off">Power Off</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="emergency">Emergency</string>
    <string name="about_project">About Project</string>
    <string name="gallery">Gallery</string>
    <string name="other">Other</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="control">Control</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="yesterday">Yesterday</string>
    <string name="Team">Team</string>
    <string name="computer_science_and_engineering_2015032">Computer Science and Engineering (2015032)</string>
    <string name="shubham_kishore">Shubham Kishore</string>
    <string name="mechanical_engineering_2015242">Mechanical Engineering (2015242)</string>
    <string name="brijesh_sharma">Brijesh Sharma</string>
    <string name="electronic_and_communication_engineering_2015068">Electronic and Communication Engineering (2015068)</string>
    <string name="jayavardhan">Jayavardhan</string>
    <string name="computer_science_and_engineering_2015123">Computer Science and Engineering (2015123)</string>
    <string name="shivam_mishra">Shivam Mishra</string>
    <string name="mechanical_engineering_2015235">Mechanical Engineering (2015235)</string>
    <string name="easy_to_control">Easy To Control</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="please_use_your_email_address_to_sign_in">Please use your Email to sign in</string>
    <string name="please_enter_email_address">Please Enter Email Address</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="please_use_your_email_address_to_register">Please use your Email to register</string>
    <string name="please_enter_phone_number">Please Enter Phone Number</string>
    <string name="register_successfully">Registration Successful</string>
    <string name="bluetooth_device_not_available">Bluetooth Device Not Available</string>
    <string name="no_paired_bluetooth_devices_found">No Paired Bluetooth Devices Found</string>
    <string name="ok">OK</string>
    <string name="please_select_one_from_below">Please select one from below</string>
    <string name="please_give_permission_to_call">Please give permission to call</string>
    <string name="please_select_a_number_to_call">Please Select a Number to Call</string>
    <string name="call">Call</string>
    <string name="select_image">Select Image</string>
    <string name="uploading_image">Uploading Image…</string>
    <string name="please_wait_while_we_upload_and_process_the_image">Please wait while we upload and process the image</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="error_in_uploading_thumbnail">Error in Uploading Thumbnail</string>
    <string name="error_in_uploading">Error in Uploading</string>
    <string name="connecting">Connecting…</string>
    <string name="please_wait">Please Wait</string>
    <string name="connection_failed_is_it_a_spp_bluetooth_try_again">Connection Failed. Is it a SPP Bluetooth? Try again.</string>
    <string name="connected">Connected</string>
    <string name="no_number_added">No Number Added</string>
    <string name="emergency_contact_one">Emergency Contact One</string>
    <string name="emergency_contact_two">Emergency Contact Two</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="saving_changes">Saving Changes</string>
    <string name="please_wait_while_we_are_updating_your_avatar">Please wait while we are updating your avatar</string>
    <string name="error_while_updating_first_emergency_contact">Error while Updating First Emergency Contact</string>
    <string name="error_while_updating_second_emergency_contact">Error while Updating Second Emergency Contact</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="default_default">Default</string>
    <string name="default_gmail_com">default@gmail.com</string>
    <string name="about_ankit">I\'m a 3rd year Bachelor of Technology (Computer Science &amp; Engineering) student at Indian Institute of Information Technology, Design &amp; Manufacturing Jabalpur. I am very passionate about new technologies. Technology is magic to play with and watch. My specialty is design and development. My interests, however, extend beyond the development and I love helping people with designing and developing. I even love makings new things. When I\'m not free, I\'m probably being entertained by funny videos, watching cricket, playing games or messing around with something inspired by Sundar Pichai. Feel free to get in touch with me for anything that you\'re mutually interested in.</string>
    <string name="Gallery">Gallery</string>
</resources>