<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_change_language"
            android:title="@string/change_language"/>

        <item android:id="@+id/nav_help"
            android:title="@string/emergency"/>

        <item android:id="@+id/nav_about_project"
            android:title="@string/about_project"/>

        <item android:id="@+id/nav_gallery"
            android:title="@string/gallery"/>

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:title="@string/contact_us"
                android:id="@+id/nav_contact_us" />
            <item
                android:title="@string/log_out"
                android:id="@+id/nav_logout" />
        </menu>
    </item>

</menu>