<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtName"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPhone"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="@color/colorAccent"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent" />

    </LinearLayout>

</android.support.v7.widget.CardView>