<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/edit_profile_layout"
    tools:context="com.example.kesar.swayam.EditProfile">

    <include layout="@layout/app_bar_layout" android:id="@+id/edit_profile_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_profile_toolbar"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/default_user"
                android:id="@+id/edit_profile_image"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_profile_emergency_contact_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/colorAccent"
                android:layout_marginTop="25dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emergency_contact_one"
                    android:textColor="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_profile_emergency_contact_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/colorAccent"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emergency_contact_two"
                    android:textColor="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/edit_profile_change_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_avatar"
                android:backgroundTint="@color/colorAccent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingRight="25dp"
                android:paddingLeft="25dp"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/edit_profile_save_changes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/save_changes" />

    </LinearLayout>

</RelativeLayout>
