<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.kesar.swayam.Team">

    <include layout="@layout/app_bar_layout" android:id="@+id/team_page_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/team_ankit_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:gravity="center_horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/default_user"
                            android:id="@+id/team_ankit"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ankit_kesarwani"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/colorAccent"
                            android:textSize="24sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/computer_science_and_engineering_2015032"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            android:gravity="center"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/team_kishore_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:gravity="center_horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/default_user"
                            android:id="@+id/team_kishore"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shubham_kishore"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/colorAccent"
                            android:textSize="24sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mechanical_engineering_2015242"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            android:gravity="center"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/team_brijesh_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:gravity="center_horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/default_user"
                            android:id="@+id/team_brijesh"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/brijesh_sharma"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/colorAccent"
                            android:textSize="24sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/electronic_and_communication_engineering_2015068"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            android:gravity="center"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/team_pandit_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:gravity="center_horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/default_user"
                            android:id="@+id/team_pandit"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shivam_mishra"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/colorAccent"
                            android:textSize="24sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mechanical_engineering_2015235"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            android:gravity="center"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/team_jayvardhan_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:gravity="center_horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:src="@drawable/default_user"
                            android:id="@+id/team_jayvardhan"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jayavardhan"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/colorAccent"
                            android:textSize="24sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/computer_science_and_engineering_2015123"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp"
                            android:gravity="center"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
